# IcePatch

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml
apd/: CMakeLists.txt
apd/src/: apd.cpp  bootimg.cpp  bootimg.hpp  cli.cpp  defs.cpp  event.cpp  kallsyms.cpp  kallsyms.hpp  kpimg_inspect.cpp  kpimg_inspect.hpp  kpm.cpp  kpm.hpp  main.cpp  module.cpp  package.cpp  package.hpp  pty.cpp  restorecon.cpp  sepolicy.cpp  supercall.cpp  supercall.hpp
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/anatdx/icepatch/: IAPRootService.aidl
app/src/main/assets/: InstallAP.sh  UninstallAP.sh  boot_patch.sh  boot_unpatch.sh  util_functions.sh
app/src/main/cpp/: apjni.cpp  apjni.hpp
app/src/main/java/com/anatdx/icepatch/: APatchApp.kt  Natives.kt
app/src/main/java/com/anatdx/icepatch/services/: RootServices.java
app/src/main/java/com/anatdx/icepatch/ui/: CrashHandleActivity.kt  MainActivity.kt  WebUIActivity.kt
app/src/main/java/com/anatdx/icepatch/ui/component/: Dialog.kt  DropdownMenu.kt  KeyEventBlocker.kt  KpmInstallConfirmDialog.kt  ModuleCardComponents.kt  ModuleInstallConfirmDialog.kt  SearchBar.kt  SettingsGroupCard.kt  SettingsItem.kt  WarningCard.kt
app/src/main/java/com/anatdx/icepatch/ui/screen/: APM.kt  AboutScreen.kt  BottomBarDestination.kt  ExecuteAPMAction.kt  Home.kt  Install.kt  InstallModeSelect.kt  KPM.kt  Patches.kt  Settings.kt  SettingsMoreScreen.kt  SuperUser.kt
app/src/main/java/com/anatdx/icepatch/ui/theme/: AmberTheme.kt  BackgroundStyle.kt  BlueGreyTheme.kt  BlueTheme.kt  BrownTheme.kt  CardStyle.kt  CyanTheme.kt  DeepOrangeTheme.kt  DeepPurpleTheme.kt  GreenTheme.kt  IndigoTheme.kt  LightBlueTheme.kt  LightGreenTheme.kt  LimeTheme.kt  OrangeTheme.kt  PinkTheme.kt  PurpleTheme.kt  RedTheme.kt  SakuraTheme.kt  TealTheme.kt  Theme.kt  TopBarStyle.kt  TransTheme.kt  Type.kt  YellowTheme.kt
app/src/main/java/com/anatdx/icepatch/ui/viewmodel/: APModuleViewModel.kt  KPModel.kt  KPModuleViewModel.kt  PatchesViewModel.kt  SuperUserViewModel.kt
app/src/main/java/com/anatdx/icepatch/ui/webui/: AppIconUtil.kt  Insets.kt  MimeUtil.java  MonetColorsProvider.kt  SuFilePathHandler.java  WebViewInterface.kt
app/src/main/java/com/anatdx/icepatch/util/: APatchCli.kt  APatchKeyHelper.java  DeviceInfoUtils.kt  Downloader.kt  HanziToPinyin.java  IOStreamUtils.kt  KpmInfoReader.kt  LatestVersionInfo.kt  LogEvent.kt  ModuleShortcut.kt  PkgConfig.kt  Version.kt  ZipModuleDetector.kt
app/src/main/java/com/anatdx/icepatch/util/ui/: APDialogBlurBehindUtils.kt  CompositionProvider.kt  HyperlinkText.kt  NavigationBarsSpacer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ab/: strings.xml
app/src/main/res/values-apc/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-az/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fil/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-gl/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-jv/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-lt/: strings.xml
app/src/main/res/values-lv/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-nb-rNO/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-si/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
docs/cn/: ap_module.md
scripts/: apbot.py
